feat(ES7): Test framework implementation in progress.